# pq-ready-code-scanner

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/workflows/: main.yml
samples/demo_vulnerable/: test_cert.crt  test_private.key
samples/demo_vulnerable/js_app/: server.js
samples/demo_vulnerable/k8s/: deployment.yaml
samples/demo_vulnerable/nginx/: site.conf
samples/demo_vulnerable/python_app/: app.py
src/pqscan/: cli.py  models.py  reporting.py  rules.py  scanner.py  utils.py
tests/: test_rules.py
